<resources>
    <string name="app_name">Passwords PRO</string>
    <string name="app_name_free">Passwords</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_button">Start</string>
    <string name="repeat_pass">Confirm Password</string>
    <string name="enter_pass">Enter Password</string>
    <string name="activity_title">Add Password</string>
    <string name="item_title">Enter Title:</string>
    <string name="item_login">Login/E-mail:</string>
    <string name="item_password">Password:</string>
    <string name="item_link">Url:</string>
    <string name="item_comment">Comments:</string>
    <string name="comment_stock_string">Comment</string>
    <string name="item_date">Date</string>
    <string name="item_add">Save</string>
    <string name="item_add_more">Add more</string>
    <string name="item_form_clear_cancel">Clear/Cancel</string>
    <string name="view_act_item_delete">Delete</string>
    <string name="view_act_item_close">Clear/Cancel</string>
    <string name="view_act_item_close_in">Close</string>
    <string name="view_act_item_edit"> - Edit</string>
    <string name="set_att_if_all_field_empty">Must not be empty!</string>
    <string name="set_att_if_first_field_empty">First field is empty!</string>
    <string name="set_att_if_second_field_empty">Second field is empty!</string>
    <string name="set_att_if_one_of_field_empty">You not enter the password!</string>
    <string name="set_att_if_fields_not_match">Different password!</string>
    <string name="set_att_if_inserted_not_match_saved">Not match!</string>
    <string name="show_pass_check">Show password</string>
    <string name="url_part">http://www.</string>
    <string name="alert_butt_pos">yes</string>
    <string name="alert_butt_neg">no</string>
    <string name="alert_butt_can">Cancel</string>
    <string name="edit_title_is_empty">Must enter Title.</string>
    <string name="edit_login_is_empty">Must enter Login.</string>
    <string name="edit_pass_is_empty">Must enter Password.</string>
    <string name="copy_button_view">C</string>
    <string name="spinner_label">Choose an type</string>
    <string name="options_button">For more</string>
    <string name="cloud_button">Backup to cloud storage</string>
    <string name="ui_opt_button">Quick Settings</string>
    <string name="action_bar_settings_text">Settings</string>
    <string name="empty_folder">Nothing to restore.</string>
    <string name="menu_about">About</string>
    <string name="menu_feedback">Send Feedback</string>
    <string name="menu_exit">Exit</string>
    <string name="back_button_toast">Please, press again to exit</string>
    <string name="db_empty">Nothing to backup or restore!</string>
    <string name="db_name_null">Database Name must not be null</string>
    <string name="alert_title">Delete </string>
    <string name="alert_layout_checkbox_del">Also delete backup</string>
    <string name="alert_layout_checkbox_ask">Never ask again</string>
    <string name="alert_dialog_pos_button">YES</string>
    <string name="alert_dialog_neg_button">NO</string>
    <string name="list_item_undo_text">Tap to undo</string>
    <string name="list_item_deleted_text">Item deleted</string>
    <string name="local_backup_descr">Local backup</string>
    <string-array name="sticker_color">
        <item>choose sticker color</item>
        <item>grey</item>
        <item>red</item>
        <item>violet</item>
        <item>light green</item>
        <item>green</item>
        <item>light blue</item>
        <item>blue</item>
        <item>yellow</item>
        <item>orange</item>
        <item>pink</item>
        <item>dark-green</item>
        <item>brown</item>
    </string-array>
    <string-array name="view_sticker_color">
        <item>grey</item>
        <item>red</item>
        <item>violet</item>
        <item>light green</item>
        <item>green</item>
        <item>light blue</item>
        <item>blue</item>
        <item>yellow</item>
        <item>orange</item>
        <item>pink</item>
        <item>dark-green</item>
        <item>brown</item>
    </string-array>
    <string name="about_dialog_title">Change app password</string>
    <string name="dialog_old_text">Enter old password</string>
    <string name="dialog_new_text">Enter new password</string>
    <string name="some_text">Password saving app.</string>
    <string name="change_pass_length">Length of password</string>
    <string name="pass_length_text">Enter length of password</string>
    <string name="lock_dialog">Enter password</string>
    <string name="float_password_title">Password: </string>
    <string name="float_login_title">Login:</string>
    <string name="float_default_title">Password</string>
    <string name="float_default_login">Login</string>
    <string name="float_default_window_title">Passwords</string>
    <string name="float_default_close_button_text">Close</string>
    <string name="settings_app_security">App Security</string>
    <string name="cloud_settings_header">Cloud Storage Settings</string>
    <string name="other_settings_header">Other Settings</string>
    <string name="single_screen_forgot_password_title">Forgot password\?</string>
    <string name="single_screen_alert_title">Restore password</string>
    <string name="settings_ui_header">User Interface</string>
    <string name="menu_add_item_title">Add Password</string>
    <string name="switcher_color_red">red</string>
    <string name="switcher_color_violet">violet</string>
    <string name="switcher_color_lGreen">l. green</string>
    <string name="switcher_color_green">green</string>
    <string name="switcher_color_lBlue">l. blue</string>
    <string name="switcher_color_blue">blue</string>
    <string name="switcher_color_yellow">yellow</string>
    <string name="switcher_color_orange">orange</string>
    <string name="switcher_color_grey">grey</string>
    <string name="switcher_color_white">white</string>
    <string name="switcher_color_black">black</string>
    <string name="view_float_item_title">Make floating</string>
    <string name="view_delete_item_title">Delete</string>
    <string name="view_save_changes_item_title">Save changes</string>
    <string name="settings_add_cloud_choose_title">Choose Cloud Storage</string>
    <string name="restore_dialog_enter_keyword">Enter Keyword</string>
    <string name="restore_dialog_show_button">SHOW</string>
    <string name="received_pass_title">Your app Password</string>
    <string name="button_ok">OK</string>
    <string name="overflow_main_more">Click to see more options…</string>
    <string name="overflow_main_new">Click to add new password</string>
    <string name="overflow_button_next">Next</string>
    <string name="overflow_main_slide">or just swipe right.</string>
    <string name="overflow_add_sticker">choose sticker color</string>
    <string name="overflow_add_save_plus">or click to save this item and clean fields for another password</string>
    <string name="overflow_add_save">Click to save password…</string>
    <string name="overflow_add_fields">Fill necessary fields and…</string>
    <string name="overflow_view_floating">Click to open floating window</string>
    <string name="overflow_view_save_changes">Click to save changes.</string>
    <string name="overflow_view_check">Check to edit password</string>
    <string name="overflow_list_explanation">Swipe element to left or right to delete it. \n \n Pull down to backup and restore previously saved passwords.</string>
    <string name="copied_login">Copied login: </string>
    <string name="copied_password">Copied password: </string>
    <string name="keyword_not_match">Keyword not match</string>
    <string name="security_insert_keyword">Insert keyword</string>
    <string name="help_overlay_button_skip">Skip</string>
    <string name="help_view_delete_item">Click to delete password.</string>
    <string name="this_title_is_used">This title is also used!</string>
    <string name="fragment_help">Help</string>
    <string name="help_add_item_quest">How to add password?</string>
    <string name="help_delete_item_quest">How to delete password?</string>
    <string name="help_edit_item_quest">How to edit password?</string>
    <string name="help_add_cloud_storage_quest">How to add cloud storage?</string>
    <string name="help_logout_quest">How to logout from cloud storage?</string>
    <string name="help_restore_key_quest">For what restore keyword is needed?</string>
    <string name="help_sync_all_quest">How to sync all you passwords?</string>
    <string name="add_item_save_and_clean">Save this and clean form</string>
    <string name="add_item_save">Save</string>
    <string name="help_use_quest">How use saved passwords?</string>
    <string name="help_use_answer">To use saved passwords open it and click on login or password to copy it.</string>
    <string name="help_cliick_to_copy">Click on login or password to copy it</string>
    <string name="couldnt_launch_market">Could not launch market</string>
    <string name="fragment_rate">Rate app</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_save_button">Save</string>
    <string name="dialog_not_licensed_title">NOT LICENSED</string>
    <string name="dialog_not_licensed_message">This application is not licensed, please buy it from the play store.</string>
    <string name="dialog_buy_button">Buy</string>
    <string name="dialog_exit_button">Exit</string>
    <string name="dialog_recheck_button">Re-Check</string>
    <string name="dialog_licensed_title">LICENSED</string>
    <string name="dialog_licensed_message">Thank You for installing PRO license.</string>
    <string name="dialog_other_title">Other version</string>
    <string name="dialog_other_text">You can\'t access to cloud while you have installed two version of application. You can open free version to make backup of data or delete it. </string>
    <string name="dialog_other_open_button">Open</string>
    <string name="item_deleted">Deleted</string>
    <string name="gen_title">Password Generator</string>
    <string name="gen_symbols">Symbols</string>
    <string name="gen_button">GEN</string>
    <string name="gen_insert">INS</string>
    <string name="pass_length">Password length must be more than 0</string>
    <string name="pass_checks">You must check at least one item</string>
    <string name="export_settings_block">Export &amp; Synchronization</string>
    <string name="interface_block">User Interface</string>
    <string name="other_settings">Other</string>
    <string name="security_block">Security</string>
    <string name="rate_settings_title">Rate application</string>
    <string name="cloud_drives_settings_title">Cloud Drives</string>
    <string name="auto_backup_title">Auto backup</string>
    <string name="auto_backup_explanation">Check to enable automatically backing up passwords</string>
    <string name="auto_sync_title">Auto sync</string>
    <string name="auto_sync_explanation">Check to enable passwords automatically synchronization</string>
    <string name="rate_question">Would You like to rate this application?</string>
    <string name="button_never">NEVER</string>
    <string name="button_later">LATER</string>
    <string name="button_rate">RATE</string>
    <string name="change_password_settings_title">Change password</string>
    <string name="password_length_title">Password length</string>
    <string name="password_length_explanation">Change application password length</string>
    <string name="keyword_setting_title">Keyword</string>
    <string name="keyword_dialog">Insert keyword</string>
    <string name="sync_action_title">Synchronize</string>
    <string name="buy_pro_title">Buy PRO</string>
    <string name="menu_sort_title">Sort</string>
    <string name="string_more_apps">More applications</string>
</resources>