<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/bg_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.cray.software.passwords.views.PrefsView
                android:id="@+id/password_pref"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:prefs_divider_bottom="true"
                app:prefs_primary_text="@string/change_password_settings_title"
                app:prefs_type="none" />

            <com.cray.software.passwords.views.PrefsView
                android:id="@+id/length_pref"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:prefs_divider_bottom="true"
                app:prefs_primary_text="@string/password_length_title"
                app:prefs_secondary_text="@string/password_length_explanation"
                app:prefs_type="text"
                app:prefs_value_text="5" />

            <com.cray.software.passwords.views.PrefsView
                android:id="@+id/keyword_pref"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:prefs_divider_bottom="true"
                app:prefs_primary_text="@string/keyword_setting_title"
                app:prefs_type="none" />
        </LinearLayout>
    </ScrollView>
</layout>