<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/bg_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.cray.software.passwords.views.PrefsView
                android:id="@+id/general_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:prefs_divider_bottom="true"
                app:prefs_primary_text="@string/interface_block"
                app:prefs_type="none" />

            <com.cray.software.passwords.views.PrefsView
                android:id="@+id/security_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:prefs_divider_bottom="true"
                app:prefs_primary_text="@string/security_block"
                app:prefs_type="none" />

            <com.cray.software.passwords.views.PrefsView
                android:id="@+id/export_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:prefs_divider_bottom="true"
                app:prefs_primary_text="@string/export_settings_block"
                app:prefs_type="none" />

            <com.cray.software.passwords.views.PrefsView
                android:id="@+id/other_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:prefs_divider_bottom="true"
                app:prefs_primary_text="@string/other_settings"
                app:prefs_type="none" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>