<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingBottom="16dp"
    android:paddingTop="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/keyword_dialog"
        android:gravity="center"/>

    <EditText
        android:layout_width="@dimen/restore_layout_edit_width"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:singleLine="true"
        android:gravity="center"
        android:hint="@string/restore_dialog_enter_keyword"
        android:id="@+id/restoreMailInsert"
        android:layout_margin="@dimen/restore_layout_edit_m" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/restore_dialog_show_button"
        android:id="@+id/showPassButton"
        android:layout_gravity="center|right"
        android:background="@android:color/transparent"/>
</LinearLayout>