<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingBottom="16dp"
    android:paddingTop="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/appName"
        android:text="@string/rate_question" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:layout_marginTop="24dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:textColor="@color/colorBlack"
            android:background="@android:color/transparent"
            android:text="@string/button_never"
            android:id="@+id/rateNever"
            android:clickable="false"
            android:layout_gravity="end"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:textColor="@color/colorBlack"
            android:background="@android:color/transparent"
            android:text="@string/button_later"
            android:id="@+id/rateLater"
            android:layout_marginLeft="10dp"
            android:clickable="false"
            android:layout_gravity="end"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:textColor="@color/colorBlack"
            android:background="@android:color/transparent"
            android:text="@string/button_rate"
            android:layout_marginLeft="10dp"
            android:id="@+id/buttonRate"
            android:clickable="false"
            android:layout_gravity="end"/>

    </LinearLayout>

</LinearLayout>
