<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/passChangeDialog"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:paddingBottom="16dp"
    android:paddingTop="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

        <TextView
            android:id="@+id/textAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/password_change_title_m_bottom"
            android:text="@string/about_dialog_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/password_change_title_t_size" />

        <EditText
            android:id="@+id/oldPassInsert"
            android:layout_width="wrap_content"
            android:hint="@string/dialog_old_text"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:inputType="numberPassword"
            android:maxLength="10"
            android:gravity="center" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/newPassInsert"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginTop="15dp"
            android:hint="@string/dialog_new_text"
            android:inputType="numberPassword"
            android:layout_gravity="center_horizontal"
            android:gravity="center" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_ok"
            android:layout_marginTop="15dp"
            android:layout_gravity="center|right"
            android:background="@android:color/transparent" />

</LinearLayout>
