<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:id="@+id/help_container">
    <RelativeLayout
        android:id="@+id/mainHelp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:visibility="gone">
        <TextView
            android:layout_width="@dimen/help_main_tip_width"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_w_arrow_up_left"
            android:text="@string/overflow_main_more"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:id="@+id/floatLeft"
            android:layout_marginTop="@dimen/help_main_tip1_m_top"
            android:textSize="@dimen/help_tip_t_size"
            android:layout_alignParentTop="true" />
        <TextView
            android:layout_width="@dimen/help_main_tip_width"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_w_arrow_up_right"
            android:text="@string/overflow_main_new"
            android:gravity="center"
            android:id="@+id/floatRight"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/help_main_tip2_m_top"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/help_tip_t_size"
            android:layout_alignParentEnd="true" />
        <Button
            android:layout_width="@dimen/help_main_tip_width"
            android:layout_height="@dimen/help_button_height"
            android:text="@string/overflow_button_next"
            android:id="@+id/button"
            android:layout_marginBottom="@dimen/help_button_m_bottom"
            android:textColor="@color/colorBlack"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/help_button_t_size"
            android:layout_centerHorizontal="true" />
        <Button
            android:layout_width="150dp"
            android:layout_height="@dimen/help_button_height"
            android:text="@string/help_overlay_button_skip"
            android:id="@+id/buttonSkip"
            android:layout_marginBottom="@dimen/help_button_m_bottom"
            android:background="@null"
            android:textColor="@color/colorWhite"
            android:layout_alignParentBottom="true"
            android:textSize="@dimen/help_button_t_size"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:layout_width="@dimen/help_main_tip_width"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_w_arrow_left"
            android:text="@string/overflow_main_slide"
            android:textSize="@dimen/help_tip_t_size"
            android:gravity="center"
            android:id="@+id/floatSlideLeft"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/colorBlack"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/addHelp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:visibility="gone">
        <TextView
            android:layout_width="@dimen/help_main_tip_width"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_w_arrow_up"
            android:text="@string/overflow_add_sticker"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:id="@+id/addFloatLeft"
            android:textSize="@dimen/help_tip_t_size"
            android:visibility="visible"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/help_add_tip1_m_top"/>
        <TextView
            android:layout_width="@dimen/help_add_tip2_width"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_w_arrow_up_right"
            android:text="@string/overflow_add_save_plus"
            android:gravity="center"
            android:id="@+id/addFloatRight"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/help_tip_t_size"
            android:visibility="visible"
            android:layout_marginTop="@dimen/help_add_tip2_m_top"
            android:layout_alignParentRight="true"/>
        <Button
            android:layout_width="@dimen/help_main_tip_width"
            android:layout_height="@dimen/help_button_height"
            android:text="@string/overflow_button_next"
            android:id="@+id/addButton"
            android:layout_marginBottom="@dimen/help_button_m_bottom"
            android:textColor="@color/colorBlack"
            android:layout_alignParentBottom="true"
            android:textSize="@dimen/help_button_t_size"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="@dimen/help_button_height"
            android:text="@string/help_overlay_button_skip"
            android:id="@+id/addButtonSkip"
            android:layout_marginBottom="@dimen/help_button_m_bottom"
            android:background="@null"
            android:textColor="@color/colorWhite"
            android:layout_alignParentBottom="true"
            android:textSize="@dimen/help_button_t_size"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:layout_width="@dimen/help_main_tip_width"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_w_arrow_up"
            android:text="@string/overflow_add_save"
            android:textSize="@dimen/help_tip_t_size"
            android:gravity="center"
            android:id="@+id/addFloatSlideLeft"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/help_add_tip3_m_top"
            android:layout_marginRight="@dimen/help_add_tip3_m_right"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:visibility="visible"
            android:layout_alignParentEnd="true" />
        <TextView
            android:id="@+id/addStartElement"
            android:layout_width="@dimen/help_main_tip_width"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_button"
            android:text="@string/overflow_add_fields"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/help_add_tip4_t_size"
            android:visibility="visible"
            android:padding="@dimen/help_add_tip4_p"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/listHelp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:visibility="gone">
        <Button
            android:layout_width="@dimen/help_main_tip_width"
            android:layout_height="@dimen/help_button_height"
            android:text="@string/view_act_item_close_in"
            android:id="@+id/listButton"
            android:layout_marginBottom="@dimen/help_button_m_bottom"
            android:textColor="@color/colorBlack"
            android:layout_alignParentBottom="true"
            android:textSize="@dimen/help_button_t_size"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="@dimen/help_list_tip1_width"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_w_arrow_up"
            android:text="@string/overflow_list_explanation"
            android:textSize="@dimen/help_tip_t_size"
            android:gravity="center|left"
            android:id="@+id/listItem"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/help_list_tip1_m_top"
            android:visibility="visible"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</FrameLayout>